--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,122 @@ compile_commands.json
 
 # VIA(L) json files that don't belong in QMK repo
 via*.json
+keyboards/keyball/readme.md
+keyboards/keyball/drivers/pmw3360/pmw3360.c
+keyboards/keyball/drivers/pmw3360/pmw3360.h
+keyboards/keyball/drivers/pmw3360/pmw3360_pointing_device_driver.c
+keyboards/keyball/keyball39/.noci
+keyboards/keyball/keyball39/config.h
+keyboards/keyball/keyball39/keyball39.c
+keyboards/keyball/keyball39/keyball39.h
+keyboards/keyball/keyball39/readme.md
+keyboards/keyball/keyball39/rules.mk
+keyboards/keyball/keyball39/keymaps/default/config.h
+keyboards/keyball/keyball39/keymaps/default/keymap.c
+keyboards/keyball/keyball39/keymaps/default/rules.mk
+keyboards/keyball/keyball39/keymaps/develop/config.h
+keyboards/keyball/keyball39/keymaps/develop/keymap.c
+keyboards/keyball/keyball39/keymaps/develop/rules.mk
+keyboards/keyball/keyball39/keymaps/test/config.h
+keyboards/keyball/keyball39/keymaps/test/keymap.c
+keyboards/keyball/keyball39/keymaps/test/rules.mk
+keyboards/keyball/keyball39/keymaps/via/config.h
+keyboards/keyball/keyball39/keymaps/via/keymap.c
+keyboards/keyball/keyball39/keymaps/via/rules.mk
+keyboards/keyball/keyball44/.noci
+keyboards/keyball/keyball44/config.h
+keyboards/keyball/keyball44/keyball44.c
+keyboards/keyball/keyball44/keyball44.h
+keyboards/keyball/keyball44/readme.md
+keyboards/keyball/keyball44/rules.mk
+keyboards/keyball/keyball44/keymaps/default/config.h
+keyboards/keyball/keyball44/keymaps/default/keymap.c
+keyboards/keyball/keyball44/keymaps/default/rules.mk
+keyboards/keyball/keyball44/keymaps/develop/config.h
+keyboards/keyball/keyball44/keymaps/develop/keymap.c
+keyboards/keyball/keyball44/keymaps/develop/rules.mk
+keyboards/keyball/keyball44/keymaps/test/config.h
+keyboards/keyball/keyball44/keymaps/test/keymap.c
+keyboards/keyball/keyball44/keymaps/test/rules.mk
+keyboards/keyball/keyball44/keymaps/via/config.h
+keyboards/keyball/keyball44/keymaps/via/keymap.c
+keyboards/keyball/keyball44/keymaps/via/rules.mk
+keyboards/keyball/keyball46/.noci
+keyboards/keyball/keyball46/config.h
+keyboards/keyball/keyball46/info.json
+keyboards/keyball/keyball46/keyball46.c
+keyboards/keyball/keyball46/keyball46.h
+keyboards/keyball/keyball46/keyball46.json
+keyboards/keyball/keyball46/keyball46_left.json
+keyboards/keyball/keyball46/readme.md
+keyboards/keyball/keyball46/rules.mk
+keyboards/keyball/keyball46/docs/diff_from_v1.md
+keyboards/keyball/keyball46/docs/features_v1_ja.md
+keyboards/keyball/keyball46/keymaps/default/config.h
+keyboards/keyball/keyball46/keymaps/default/keymap.c
+keyboards/keyball/keyball46/keymaps/default/rules.mk
+keyboards/keyball/keyball46/keymaps/develop/config.h
+keyboards/keyball/keyball46/keymaps/develop/keymap.c
+keyboards/keyball/keyball46/keymaps/develop/rules.mk
+keyboards/keyball/keyball46/keymaps/test/config.h
+keyboards/keyball/keyball46/keymaps/test/keymap.c
+keyboards/keyball/keyball46/keymaps/test/rules.mk
+keyboards/keyball/keyball46/keymaps/test_Both/config.h
+keyboards/keyball/keyball46/keymaps/test_Both/keymap.c
+keyboards/keyball/keyball46/keymaps/test_Both/rules.mk
+keyboards/keyball/keyball46/keymaps/test_Left/config.h
+keyboards/keyball/keyball46/keymaps/test_Left/keymap.c
+keyboards/keyball/keyball46/keymaps/test_Left/rules.mk
+keyboards/keyball/keyball46/keymaps/via/config.h
+keyboards/keyball/keyball46/keymaps/via/keymap.c
+keyboards/keyball/keyball46/keymaps/via/rules.mk
+keyboards/keyball/keyball46/keymaps/via_Both/config.h
+keyboards/keyball/keyball46/keymaps/via_Both/keymap.c
+keyboards/keyball/keyball46/keymaps/via_Both/rules.mk
+keyboards/keyball/keyball46/keymaps/via_Left/config.h
+keyboards/keyball/keyball46/keymaps/via_Left/keymap.c
+keyboards/keyball/keyball46/keymaps/via_Left/rules.mk
+keyboards/keyball/keyball61/.noci
+keyboards/keyball/keyball61/config.h
+keyboards/keyball/keyball61/keyball61.c
+keyboards/keyball/keyball61/keyball61.h
+keyboards/keyball/keyball61/matrix.c
+keyboards/keyball/keyball61/readme.md
+keyboards/keyball/keyball61/rules.mk
+keyboards/keyball/keyball61/keymaps/default/config.h
+keyboards/keyball/keyball61/keymaps/default/keymap.c
+keyboards/keyball/keyball61/keymaps/default/rules.mk
+keyboards/keyball/keyball61/keymaps/develop/config.h
+keyboards/keyball/keyball61/keymaps/develop/keymap.c
+keyboards/keyball/keyball61/keymaps/develop/rules.mk
+keyboards/keyball/keyball61/keymaps/test/config.h
+keyboards/keyball/keyball61/keymaps/test/keymap.c
+keyboards/keyball/keyball61/keymaps/test/rules.mk
+keyboards/keyball/keyball61/keymaps/via/config.h
+keyboards/keyball/keyball61/keymaps/via/keymap.c
+keyboards/keyball/keyball61/keymaps/via/rules.mk
+keyboards/keyball/lib/glcdfont.c
+keyboards/keyball/lib/duplexmatrix/duplexmatrix.c
+keyboards/keyball/lib/duplexmatrix/duplexmatrix.h
+keyboards/keyball/lib/keyball/keyball.c
+keyboards/keyball/lib/keyball/keyball.h
+keyboards/keyball/lib/oledkit/oledkit.c
+keyboards/keyball/lib/oledkit/oledkit.h
+keyboards/keyball/one47/.noci
+keyboards/keyball/one47/config.h
+keyboards/keyball/one47/one47.c
+keyboards/keyball/one47/one47.h
+keyboards/keyball/one47/readme.md
+keyboards/keyball/one47/rules.mk
+keyboards/keyball/one47/keymaps/default/config.h
+keyboards/keyball/one47/keymaps/default/keymap.c
+keyboards/keyball/one47/keymaps/default/rules.mk
+keyboards/keyball/one47/keymaps/develop/config.h
+keyboards/keyball/one47/keymaps/develop/keymap.c
+keyboards/keyball/one47/keymaps/develop/rules.mk
+keyboards/keyball/one47/keymaps/test/config.h
+keyboards/keyball/one47/keymaps/test/keymap.c
+keyboards/keyball/one47/keymaps/test/rules.mk
+keyboards/keyball/one47/keymaps/via/config.h
+keyboards/keyball/one47/keymaps/via/keymap.c
+keyboards/keyball/one47/keymaps/via/rules.mk
